Modify live username and hostname to remove vyatta branding
Change the livecd username from 'vyatta' to 'tmpuser', and the livecd
hostname from 'vyatta' to 'node'. As a result, the prompt becomes
tmpuser@node.

VRVDR-50781

(cherry picked from commit 4e0df1deda46042aa5ff274c7540575eb6f34cff)

--- a/config/includes.binary/live/config/user-setup.conf
+++ b/config/includes.binary/live/config/user-setup.conf
@@ -3,7 +3,7 @@
 # This is the configuration file for the vyatta user during the live ISO boot
 #
 
-LIVE_USERNAME=vyatta
+LIVE_USERNAME=tmpuser
 LIVE_USER_FULLNAME="vRouter Live user"
 LIVE_USER_DEFAULT_GROUPS="${LIVE_USER_DEFAULT_GROUPS},vyattacfg"
 export LIVE_USERNAME LIVE_USER_FULLNAME LIVE_USER_DEFAULT_GROUPS
