Add --force-yes to apt options
This is required as on the non-OBS ISO build, it's possible that package
downgrades will be needed. The newer --allow-downgrades option cannot be
used as it causes errors on some other apt commands.

VRVDR-51297

--- a/auto/config
+++ b/auto/config
@@ -60,7 +60,7 @@ ISO_VOLUME=$(get_prjconf_parameter _vyatta_version_id)
 lb config noauto \
     --apt apt \
     --apt-indices false \
-    --apt-options "--yes -o Acquire::Check-Valid-Until=false" \
+    --apt-options "--yes --force-yes -o Acquire::Check-Valid-Until=false" \
     --apt-recommends false \
     --apt-source-archives false \
     --backports false \
