Support toggling ONIE build via prjconf variable
Creating the ONIE image can add significant time (minutes) to an
image build. To allow quicker builds when ONIE images aren't needed
they can now be toggled by setting the _onie prjconf variable to
'true' or 'false'. Since ONIE images are not required more often than
they are; if _onie is *not* set, ONIE images will *not* be built.

VYINT-4442

--- a/auto/config
+++ b/auto/config
@@ -57,6 +57,12 @@ ISO_APPLICATION=$(get_prjconf_parameter _vyatta_pretty_name)
 ISO_PUBLISHER=$(get_prjconf_parameter _vyatta_name)
 ISO_VOLUME=$(get_prjconf_parameter _vyatta_version_id)
 
+ONIE=$(get_prjconf_parameter _onie)
+if [ "$ONIE" != "true" ] && [ "$ONIE" != "false" ]; then
+    echo "Unknown _onie value '$ONIE', using 'false'"
+    ONIE="false"
+fi
+
 lb config noauto \
     --apt apt \
     --apt-indices false \
@@ -86,6 +92,6 @@ lb config noauto \
     --source false \
     --updates false \
     --verbose \
-    --onie true \
+    --onie "${ONIE}" \
     --onie-kernel-cmdline "systemd.show_status=1 net.ifnames=1 vyatta-autoinstall" \
     "${@}"
